--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.13.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1"
   }
