--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 
 FrontEnd/node_modules
-BackEnd/ITI.LinkedIn/.vs/*
-BackEnd/ITI.LinkedIn/packeges/*
+BackEnd/ITI.LinkedIn/.vs
+BackEnd/ITI.LinkedIn/packages
