--- a/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Models/ITI.LinkedIn.Models.csproj
+++ b/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Models/ITI.LinkedIn.Models.csproj
@@ -58,6 +58,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationUser.cs" />
+    <Compile Include="Language.cs" />
+    <Compile Include="Proficiency.cs" />
+    <Compile Include="UserLanguages.cs" />
     <Compile Include="UserProject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
