--- a/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Context/ITI.LinkedIn.Context.csproj
+++ b/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Context/ITI.LinkedIn.Context.csproj
@@ -58,6 +58,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationDbContext.cs" />
+    <Compile Include="Migrations\202002240730091_Init.cs" />
+    <Compile Include="Migrations\202002240730091_Init.Designer.cs">
+      <DependentUpon>202002240730091_Init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -69,6 +74,11 @@
       <Project>{99f4112d-4084-46c3-85cf-0e6177d67fd0}</Project>
       <Name>ITI.LinkedIn.Models</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202002240730091_Init.resx">
+      <DependentUpon>202002240730091_Init.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
