--- a/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Web/ITI.LinkedIn.Web.csproj
+++ b/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Web/ITI.LinkedIn.Web.csproj
@@ -219,6 +219,7 @@
     <Content Include="Content\Assets\Images\PostPhotos\637174703626247038pf-3.jpg" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\CSS\NewsFeed.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
