--- a/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Web/ITI.LinkedIn.Web.csproj
+++ b/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Web/ITI.LinkedIn.Web.csproj
@@ -388,6 +388,9 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\Home\_BackgroundCard.cshtml" />
+    <Content Include="Views\Home\_WorkExoerience.cshtml" />
+    <Content Include="Views\Home\_Education.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
