Updating NewsFeed JS

--- a/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Web/ITI.LinkedIn.Web.csproj
+++ b/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Web/ITI.LinkedIn.Web.csproj
@@ -220,6 +220,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\CSS\NewsFeed.css" />
+    <Content Include="Content\JS\NewsFeedScript.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -287,6 +288,7 @@
     <Content Include="Views\Posts\Edit.cshtml" />
     <Content Include="Views\Posts\List.cshtml" />
     <Content Include="Views\Posts\NewsFeed.cshtml" />
+    <Content Include="Views\Posts\_Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
