--- a/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Core/ITI.LinkedIn.Core.csproj
+++ b/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Core/ITI.LinkedIn.Core.csproj
@@ -91,6 +91,9 @@
     <Compile Include="Managers\ApplicationRoleManager.cs" />
     <Compile Include="Managers\ApplicationSignInManager.cs" />
     <Compile Include="Managers\ApplicationUserManager.cs" />
+    <Compile Include="SingletonManagers\SingletonCourseManager.cs" />
+    <Compile Include="SingletonManagers\SingletonEmploymentTypeManager.cs" />
+    <Compile Include="SingletonManagers\SingletonSkillManager.cs" />
     <Compile Include="UnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
