--- a/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Models/ITI.LinkedIn.Models.csproj
+++ b/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Models/ITI.LinkedIn.Models.csproj
@@ -58,7 +58,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationUser.cs" />
+    <Compile Include="Course.cs" />
+    <Compile Include="EmploymentType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Skill.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
