--- a/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Web/ITI.LinkedIn.Web.csproj
+++ b/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Web/ITI.LinkedIn.Web.csproj
@@ -197,6 +197,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Content\EducationsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -216,8 +217,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="css\font-awesome.css" />
     <Content Include="css\font-awesome.min.css" />
-    <Content Include="fonts\fontawesome-webfont.svg" />
-    <Content Include="Views\Home\Htmlindex.html" />
+    <Content Include="Views\fonts\fontawesome-webfont.svg" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\esm\popper-utils.js" />
@@ -251,11 +251,11 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
-    <Content Include="fonts\FontAwesome.otf" />
-    <Content Include="fonts\fontawesome-webfont.woff2" />
-    <Content Include="fonts\fontawesome-webfont.woff" />
-    <Content Include="fonts\fontawesome-webfont.ttf" />
-    <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="Views\fonts\FontAwesome.otf" />
+    <Content Include="Views\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Views\fonts\fontawesome-webfont.woff" />
+    <Content Include="Views\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Views\fonts\fontawesome-webfont.eot" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <None Include="Scripts\jquery-3.0.0-vsdoc.js" />
     <Content Include="Scripts\jquery-3.0.0.js" />
@@ -391,6 +391,13 @@
     <Content Include="Views\Home\_BackgroundCard.cshtml" />
     <Content Include="Views\Home\_WorkExoerience.cshtml" />
     <Content Include="Views\Home\_Education.cshtml" />
+    <Content Include="Views\Educations\Create.cshtml" />
+    <Content Include="Views\Educations\Delete.cshtml" />
+    <Content Include="Views\Educations\Details.cshtml" />
+    <Content Include="Views\Educations\Edit.cshtml" />
+    <Content Include="Views\Educations\Index.cshtml" />
+    <Content Include="Views\Home\_Modal.cshtml" />
+    <Content Include="Views\Shared\_PartialModalBody.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -416,9 +423,6 @@
       <Project>{ad016c2a-ba3e-4947-9e1d-657459a8a8d1}</Project>
       <Name>ITI.LinkedIn.Repository</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <TypeScriptCompile Include="Scripts\index.d.ts" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
