Shitty Build Files Again

--- a/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Core/ITI.LinkedIn.Core.csproj
+++ b/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Core/ITI.LinkedIn.Core.csproj
@@ -94,6 +94,7 @@
     <Compile Include="SingletonManagers\SingletonCourseManager.cs" />
     <Compile Include="SingletonManagers\SingletonEmploymentTypeManager.cs" />
     <Compile Include="SingletonManagers\SingletonSkillManager.cs" />
+    <Compile Include="SingletonManagers\SingletonUserConnectionManager.cs" />
     <Compile Include="SingletonManagers\SingletonUserPhotoManager.cs" />
     <Compile Include="UnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
