--- a/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Models/ITI.LinkedIn.Models.csproj
+++ b/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Models/ITI.LinkedIn.Models.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ApplicationUser.cs" />
     <Compile Include="Course.cs" />
     <Compile Include="EmploymentType.cs" />
+    <Compile Include="PivotModels\UserConnection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Skill.cs" />
     <Compile Include="UserPhoto.cs" />
