Done merging Nora's BackEnd

--- a/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Models/ITI.LinkedIn.Models.csproj
+++ b/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Models/ITI.LinkedIn.Models.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="ApplicationUser.cs" />
     <Compile Include="Course.cs" />
+    <Compile Include="Education.cs" />
     <Compile Include="EmploymentType.cs" />
     <Compile Include="Enums\Proficiency.cs" />
     <Compile Include="Language.cs" />
