--- a/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Core/ITI.LinkedIn.Core.csproj
+++ b/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Core/ITI.LinkedIn.Core.csproj
@@ -91,13 +91,18 @@
     <Compile Include="Managers\ApplicationRoleManager.cs" />
     <Compile Include="Managers\ApplicationSignInManager.cs" />
     <Compile Include="Managers\ApplicationUserManager.cs" />
+    <Compile Include="SingletonManagers\CertificationManager.cs" />
+    <Compile Include="SingletonManagers\CompanyManager.cs" />
+    <Compile Include="SingletonManagers\CountryManager.cs" />
     <Compile Include="SingletonManagers\EducationManager.cs" />
+    <Compile Include="SingletonManagers\ExperienceManager.cs" />
+    <Compile Include="SingletonManagers\JobManager.cs" />
     <Compile Include="SingletonManagers\LanguageManager.cs" />
-    <Compile Include="SingletonManagers\SingletonCourseManager.cs" />
-    <Compile Include="SingletonManagers\SingletonEmploymentTypeManager.cs" />
-    <Compile Include="SingletonManagers\SingletonSkillManager.cs" />
-    <Compile Include="SingletonManagers\SingletonUserConnectionManager.cs" />
-    <Compile Include="SingletonManagers\SingletonUserPhotoManager.cs" />
+    <Compile Include="SingletonManagers\CourseManager.cs" />
+    <Compile Include="SingletonManagers\EmploymentTypeManager.cs" />
+    <Compile Include="SingletonManagers\SkillManager.cs" />
+    <Compile Include="SingletonManagers\UserConnectionManager.cs" />
+    <Compile Include="SingletonManagers\UserPhotoManager.cs" />
     <Compile Include="SingletonManagers\UserLanguageManager.cs" />
     <Compile Include="SingletonManagers\UserProjectManager.cs" />
     <Compile Include="UnitOfWork.cs" />
