--- a/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Models/ITI.LinkedIn.Models.csproj
+++ b/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Models/ITI.LinkedIn.Models.csproj
@@ -58,10 +58,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationUser.cs" />
+    <Compile Include="Certification.cs" />
+    <Compile Include="Company.cs" />
+    <Compile Include="Country.cs" />
     <Compile Include="Course.cs" />
     <Compile Include="Education.cs" />
     <Compile Include="EmploymentType.cs" />
     <Compile Include="Enums\Proficiency.cs" />
+    <Compile Include="Experience.cs" />
+    <Compile Include="Job.cs" />
     <Compile Include="Language.cs" />
     <Compile Include="PivotModels\UserConnection.cs" />
     <Compile Include="PivotModels\UserLanguage.cs" />
@@ -69,11 +74,16 @@
     <Compile Include="Skill.cs" />
     <Compile Include="UserPhoto.cs" />
     <Compile Include="UserProject.cs" />
+    <Compile Include="ViewModels\CertificationViewModel.cs" />
+    <Compile Include="ViewModels\ExperienceViewModel.cs" />
+    <Compile Include="ViewModels\JobViewModel.cs" />
+    <Compile Include="ViewModels\ProfileViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
